fixed text alignment

--- a/app/assets/stylesheets/story_index.css
+++ b/app/assets/stylesheets/story_index.css
@@ -9,7 +9,7 @@ div.index-header {
 
 .index-header-header {
   position: relative;
-  top: 25%;
+  top: 20%;
   width: 100%;
   min-width: 970px;
   text-align: center;
